// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormLabel when component prop is set to label renders label with expected classes 1`] = `
<Fragment>
  <label
    className="usa-label text-bold font-heading-lg line-height-sans-3 margin-bottom-1 maxw-tablet"
    htmlFor="foo"
    id="foo_label"
  >
    Field Label
  </label>
</Fragment>
`;

exports[`FormLabel when component prop is set to legend renders legend with expected classes 1`] = `
<Fragment>
  <legend
    className="usa-label text-bold usa-legend font-heading-lg line-height-sans-3 margin-bottom-1 maxw-tablet"
    htmlFor="foo"
    id="foo_label"
  >
    Field Label
  </legend>
</Fragment>
`;

exports[`FormLabel when the type prop isn't set renders label with expected classes 1`] = `
<Fragment>
  <label
    className="usa-label text-bold font-heading-lg line-height-sans-3 margin-bottom-1 maxw-tablet"
    htmlFor="foo"
    id="foo_label"
  >
    Field Label
  </label>
</Fragment>
`;
